--- a/index.html
+++ b/index.html
@@ -3,8 +3,32 @@
 <head>
   <meta charset="utf-8">
   <title>SVG Icon Sets</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/modules.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
+
 <body>
 
-</body>
-</html>
+  <body class="gutter text-center">
+    <h1 class="pad-t-2 zetta text-center push-double">Mars colonization structures</h1>
+    <div class="grid">
+
+      <section class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pad-top gutter push">
+        <div class="max-length gutter-quarter">
+          <i class="icon i-192 push">
+            <svg><use xlink:href="images/space-icons.svg#space-bubbles" /></svg>
+          </i>
+
+          <h2 class="text-left push-half">Space bubbles</h2>
+          <p class="text-left">Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
+          <div class="text-left">
+            <a class="btn btn-ghost" href="#">Learn about space bubbles</a>
+          </div>
+        </div>
+      </section>
+
+    </body>
+    </html>
