--- a/index.html
+++ b/index.html
@@ -10,25 +10,50 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="gutter text-center">
+  <h1 class="pad-t-2 zetta text-center push-double">Mars colonization structures</h1>
+  <div class="grid">
 
-  <body class="gutter text-center">
-    <h1 class="pad-t-2 zetta text-center push-double">Mars colonization structures</h1>
-    <div class="grid">
+    <section class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pad-top gutter push">
+      <div class="max-length gutter-quarter">
+        <i class="icon i-192 push">
+          <svg><use xlink:href="images/sprite-sheet.svg#space-bubbles" /></svg>
+        </i>
 
-      <section class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pad-top gutter push">
-        <div class="max-length gutter-quarter">
-          <i class="icon i-192 push">
-            <svg><use xlink:href="images/space-icons.svg#space-bubbles" /></svg>
-          </i>
-
-          <h2 class="text-left push-half">Space bubbles</h2>
-          <p class="text-left">Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
-          <div class="text-left">
-            <a class="btn btn-ghost" href="#">Learn about space bubbles</a>
-          </div>
+        <h2 class="text-left push-half">Space bubbles</h2>
+        <p class="text-left">Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
+        <div class="text-left">
+          <a class="btn btn-ghost" href="#">Learn about space bubbles</a>
         </div>
-      </section>
+      </div>
+    </section>
 
-    </body>
-    </html>
+    <section class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pad-top gutter">
+      <div class="max-length push">
+        <i class="icon i-192 push-half">
+          <svg><use xlink:href="images/sprite-sheet.svg#super-domes" /></svg>
+        </i>
+        <h2 class="text-left push-half">Super domes</h2>
+        <p class="text-left">Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
+        <div class="text-left">
+          <a class="btn btn-ghost" href="#">Learn about super domes</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pad-top gutter push-double">
+      <div class="max-length">
+        <i class="icon i-192 push-half">
+          <svg><use xlink:href="images/sprite-sheet.svg#mecha-stilts" /></svg>
+        </i>
+        <h2 class="text-left push-half">Mecha-stilts</h2>
+        <p class="text-left">Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
+        <div class="text-left push">
+          <a class="btn btn-ghost" href="#">Learn about mecha-stilts</a>
+        </div>
+      </div>
+    </section>
+  </div>
+
+</body>
+</html>
