--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>SVG Icon Sets</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/grid.css" rel="stylesheet">
   <link href="css/modules.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Overpass:400,700" rel="stylesheet">
 </head>
 
 <body class="gutter text-center">
