--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pad-top gutter push">
       <div class="max-length gutter-quarter">
         <i class="icon i-192 push">
-          <svg><use xlink:href="images/sprite-sheet.svg#space-bubbles" /></svg>
+          <svg><use xlink:href="images/sprite-sheet.svg#artboard-1" /></svg>
         </i>
 
         <h2 class="text-left push-half">Space bubbles</h2>
@@ -32,7 +32,7 @@
     <section class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pad-top gutter">
       <div class="max-length push">
         <i class="icon i-192 push-half">
-          <svg><use xlink:href="images/sprite-sheet.svg#super-domes" /></svg>
+          <svg><use xlink:href="images/sprite-sheet.svg#artboard-2" /></svg>
         </i>
         <h2 class="text-left push-half">Super domes</h2>
         <p class="text-left">Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
@@ -45,7 +45,7 @@
     <section class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 pad-top gutter push-double">
       <div class="max-length">
         <i class="icon i-192 push-half">
-          <svg><use xlink:href="images/sprite-sheet.svg#mecha-stilts" /></svg>
+          <svg><use xlink:href="images/sprite-sheet.svg#artboard-3" /></svg>
         </i>
         <h2 class="text-left push-half">Mecha-stilts</h2>
         <p class="text-left">Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
